--- a/index.html
+++ b/index.html
@@ -166,7 +166,56 @@
         <div class="blacktext-noalign">
           <p>Cras gravida arcu tincidunt, suscipit velit sed, porta sapien. Maecenas a aliquam<span> lectus. Vivamus consequat purus quis ligula vestibulum, eget mattis ex fermentum. <span> Donec placerat felis sit amet venenatis faucibus. Praesent aliquet convallis.</p>
         </div>
+        <div class="takeatour-botton">
           <a href="#" class="takeatour"><i class="far fa-lightbulb"></i> Take A Tour</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="color-numbers">
+      <div class="row align-items-center">
+        <div class="col">
+          <h2 class="grren-number">966</h2>
+          <div class="small-line">
+
+          </div>
+          <p>Support Ticket Solved</p>
+        </div>
+        <div class="col">
+          <h2 class="blue-number">20K</h2>
+          <div class="small-line">
+
+          </div>
+          <p>Purchaes</p>
+        </div>
+        <div class="col">
+          <h2 class="red-number">1832</h2>
+          <div class="small-line">
+
+          </div>
+          <p>Cafe Cups</p>
+        </div>
+        <div class="col">
+          <h2 class="grren-number">1.2M</h2>
+          <div class="small-line">
+
+          </div>
+          <p>Facebook Likes</p>
+        </div>
+        <div class="col">
+          <h2 class="perple-number">10K</h2>
+          <div class="small-line">
+
+          </div>
+          <p>Tweets</p>
+        </div>
+        <div class="col">
+          <h2 class="orange-number">+18K</h2>
+          <div class="small-line">
+
+          </div>
+          <p>Comments</p>
+        </div>
       </div>
     </div>
 
