--- a/index.html
+++ b/index.html
@@ -174,42 +174,48 @@
 
     <div class="color-numbers">
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col-2">
+          <div class="greenline">
+
+          </div>
           <h2 class="grren-number">966</h2>
           <div class="small-line">
 
           </div>
           <p>Support Ticket Solved</p>
         </div>
-        <div class="col">
+        <div class="col-2">
           <h2 class="blue-number">20K</h2>
           <div class="small-line">
 
           </div>
           <p>Purchaes</p>
         </div>
-        <div class="col">
+        <div class="col-2">
           <h2 class="red-number">1832</h2>
           <div class="small-line">
 
           </div>
           <p>Cafe Cups</p>
         </div>
-        <div class="col">
+        <div class="col-2">
+          <div class="greenline">
+
+          </div>
           <h2 class="grren-number">1.2M</h2>
           <div class="small-line">
 
           </div>
           <p>Facebook Likes</p>
         </div>
-        <div class="col">
+        <div class="col-2">
           <h2 class="perple-number">10K</h2>
           <div class="small-line">
 
           </div>
           <p>Tweets</p>
         </div>
-        <div class="col">
+        <div class="col-2">
           <h2 class="orange-number">+18K</h2>
           <div class="small-line">
 
