--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Tajawal:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
    </head>
    <body>
      <div class="container">
@@ -174,7 +176,7 @@
 
     <div class="color-numbers">
       <div class="row align-items-center">
-        <div class="col-2">
+        <div class="col">
           <div class="greenline">
 
           </div>
@@ -184,38 +186,43 @@
           </div>
           <p>Support Ticket Solved</p>
         </div>
-        <div class="col-2">
+        <div class="col">
+          <div class="blueline"></div>
           <h2 class="blue-number">20K</h2>
           <div class="small-line">
 
           </div>
           <p>Purchaes</p>
         </div>
-        <div class="col-2">
+        <div class="col">
+          <div class="redline"></div>
           <h2 class="red-number">1832</h2>
           <div class="small-line">
 
           </div>
           <p>Cafe Cups</p>
         </div>
-        <div class="col-2">
+        <div class="col">
           <div class="greenline">
 
           </div>
           <h2 class="grren-number">1.2M</h2>
           <div class="small-line">
 
+
           </div>
           <p>Facebook Likes</p>
         </div>
-        <div class="col-2">
+        <div class="col">
+          <div class="perpleline"></div>
           <h2 class="perple-number">10K</h2>
           <div class="small-line">
 
           </div>
           <p>Tweets</p>
         </div>
-        <div class="col-2">
+        <div class="col">
+          <div class="orangeline"></div>
           <h2 class="orange-number">+18K</h2>
           <div class="small-line">
 
@@ -225,10 +232,61 @@
       </div>
     </div>
 
+    <div class="slider">
+
+      <div>
+        <div class="container">
+          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+          <div class="small-line"></div>
+          <h5>austinthesing</h5>
+          <h6>Themeforest Custumer</h6>
+        </div>
+      </div>
+      <div>
+        <div class="container">
+          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+          <div class="small-line"></div>
+          <h5>austinthesing</h5>
+          <h6>Themeforest Custumer</h6>
+        </div>
+      </div>
+      <div>
+        <div class="container">
+          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+          <div class="small-line"></div>
+          <h5>austinthesing</h5>
+          <h6>Themeforest Custumer</h6>
+        </div>
+      </div>
+      <div>
+        <div class="container">
+          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+          <div class="small-line"></div>
+          <h5>austinthesing</h5>
+          <h6>Themeforest Custumer</h6>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.slider -->
+
 
 
 
      <script src="jquery-3.3.1.min.js"></script>
      <script src="js/bootstrap.min.js"></script>
+     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+     <script type="text/javascript" src="slick/slick.min.js"></script>
+
+     <script type="text/javascript">
+    $(document).ready(function(){
+      $('.slider').slick({
+          dots: true,
+          autoplay: true,
+          autoplaySpeed: 2000,
+      });
+    });
+  </script>
    </body>
  </html>
