--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
 
       </div>
       <div class="colori">
-        <h3>Dispenser<span> Bottle Mockup</h3>
-        <p class="whitetext">Psd Mockup Template</p>
-
+        <div class="container">
+          <h3>Dispenser<span> Bottle Mockup</h3>
+          <p class="whitetext">Psd Mockup Template</p>
+        </div>
       </div>
 
     </div>
@@ -231,45 +232,45 @@
         </div>
       </div>
     </div>
+    <div class="slidered">
+      <div class="slider">
 
-    <div class="slider">
+        <div>
+          <div class="container">
+            <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+            <div class="small-line"></div>
+            <h5>austinthesing</h5>
+            <h6>Themeforest Custumer</h6>
+          </div>
+        </div>
+        <div>
+          <div class="container">
+            <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+            <div class="small-line"></div>
+            <h5>austinthesing</h5>
+            <h6>Themeforest Custumer</h6>
+          </div>
+        </div>
+        <div>
+          <div class="container">
+            <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+            <div class="small-line"></div>
+            <h5>austinthesing</h5>
+            <h6>Themeforest Custumer</h6>
+          </div>
+        </div>
+        <div>
+          <div class="container">
+            <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
+            <div class="small-line"></div>
+            <h5>austinthesing</h5>
+            <h6>Themeforest Custumer</h6>
+          </div>
+        </div>
 
-      <div>
-        <div class="container">
-          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
-          <div class="small-line"></div>
-          <h5>austinthesing</h5>
-          <h6>Themeforest Custumer</h6>
-        </div>
       </div>
-      <div>
-        <div class="container">
-          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
-          <div class="small-line"></div>
-          <h5>austinthesing</h5>
-          <h6>Themeforest Custumer</h6>
-        </div>
-      </div>
-      <div>
-        <div class="container">
-          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
-          <div class="small-line"></div>
-          <h5>austinthesing</h5>
-          <h6>Themeforest Custumer</h6>
-        </div>
-      </div>
-      <div>
-        <div class="container">
-          <p>This is the best WordPress theme I have used to date... Incredible Customizability<span> and it is Incredible to work with I took a project I couldnt complete<span> and Completed it with this theme in one day. Thanks guys!</p>
-          <div class="small-line"></div>
-          <h5>austinthesing</h5>
-          <h6>Themeforest Custumer</h6>
-        </div>
-      </div>
-
+      <!-- /.slider -->
     </div>
-    <!-- /.slider -->
-
 
 
 
@@ -282,9 +283,9 @@
      <script type="text/javascript">
     $(document).ready(function(){
       $('.slider').slick({
-          dots: true,
-          autoplay: true,
-          autoplaySpeed: 2000,
+            autoplay: true,
+            dots: true,
+
       });
     });
   </script>
