--- a/index.html
+++ b/index.html
@@ -272,6 +272,59 @@
       <!-- /.slider -->
     </div>
 
+    <div class="whatwedo">
+      <div class="row">
+        <div class="col-4">
+          <h3>What We Do</h3>
+          <div class="small-line"></div>
+          <h6>Curabitur ac lacus arcu. Sed vehicula varius lectus auctor viverra.<span> Nulla vehicula nibh vel ante commodo feugiat.</h6>
+          <p>TheFox include design that can be used for any type of website: business, corporate,<br> portfolio, blog, products, magazine, etc. Buy TheFox and join our awesome<br> community, let’s make TheFox better together!</p>
+          <ul class="prop">
+            <li>> Clean, modern, multi-purpose design can be used for any type of website</li>
+            <li>> The New Ultimate Multi-Purpose WordPress Theme</li>
+            <li>> WordPress 4.1 Tested and Approved</li>
+            <li>> Built with HTML5 and CSS3</li>
+            <li>> SEO Optimized, Well organized, commented & clean code</li>
+            <li>> Cross-Browser Compatibility: Chrome, Firefox, Safari, IE9 ~ IE11</li>
+            <li>> 100% Responsive Theme</li>
+            <li>>  Comes with the Visual Composer, most awesome visual page builder</li>
+          </ul>
+          <div class="takeatour-botton">
+            <a href="#" class="takeatour"><i class="far fa-lightbulb"></i> Take A Tour</a>
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="row justify-content-center">
+            <div class="col-md-3">
+              <img src="img/vector-smart-object.png" alt="">
+
+            </div>
+            <div class="col-md-3">
+              <img src="img/ok.png" alt="">
+
+            </div>
+            <div class="col-md-3">
+              <img src="img/youtube.png" alt="">
+
+            </div>
+            <div class="w-100"></div>
+            <div class="col-md-3">
+              <img src="img/photo.png" alt="">
+
+            </div>
+            <div class="col-md-3">
+              <img src="img/chemodanchik.png" alt="">
+
+            </div>
+            <div class="col-md-3">
+              <img src="img/translate.png" alt="">
+              
+            </div>
+          </div>
+        </div>
+     </div>
+    </div>
+
 
 
      <script src="jquery-3.3.1.min.js"></script>
