--- a/index.html
+++ b/index.html
@@ -297,28 +297,45 @@
           <div class="row justify-content-center">
             <div class="col-md-3">
               <img src="img/vector-smart-object.png" alt="">
-
+              <h6>Web Disign</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> varius lectus auctor viverra</p>
+              <a href="#">> learn more</a>
             </div>
             <div class="col-md-3">
               <img src="img/ok.png" alt="">
+              <h6>Ecommerce</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> varius lectus auctor viverra</p>
+              <a href="#">> learn more</a>
 
             </div>
             <div class="col-md-3">
               <img src="img/youtube.png" alt="">
+              <h6>Video Advertising</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> varius lectus auctor viverra</p>
+              <a href="#">> learn more</a>
 
             </div>
             <div class="w-100"></div>
             <div class="col-md-3">
               <img src="img/photo.png" alt="">
+              <h6>Photography</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> varius lectus auctor viverra</p>
+              <a href="#">> learn more</a>
 
             </div>
             <div class="col-md-3">
               <img src="img/chemodanchik.png" alt="">
+              <h6>Graphic Design</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> varius lectus auctor viverra</p>
+              <a href="#">> learn more</a>
 
             </div>
             <div class="col-md-3">
               <img src="img/translate.png" alt="">
-              
+              <h6>Support Tools</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> varius lectus auctor viverra</p>
+              <a href="#">> learn more</a>
+
             </div>
           </div>
         </div>
