--- a/index.html
+++ b/index.html
@@ -342,6 +342,48 @@
      </div>
     </div>
 
+    <div class="thebestpartners">
+      <div class="container">
+        <h3>The Best Partners</h3>
+        <div class="small-line"></div>
+        <p>Curabitur ac lacus arcu. Sed vehicula varius lectus auctor viverra.<br> Nulla vehicula nibh vel ante commodo feugiat.</p>
+
+        <div class="row align-items-center">
+
+          <div class="col-3">
+            <img src="img/cubanese.png" alt="">
+            <div class="poloska-ver"></div>
+          </div>
+          <div class="col-3">
+            <img src="img/handcralt.png" alt="">
+
+          </div>
+
+          <div class="col-3">
+            <img src="img/premium.png" alt="">
+
+          </div>
+          <div class="col-3">
+            <img src="img/genuine.png" alt="">
+          </div>
+          <div class="w-100"></div>
+          <div class="col-3">
+            <img src="img/staton.png" alt="">
+          </div>
+          <div class="col-3">
+            <img src="img/logo-8.png" alt="">
+          </div>
+          <div class="col-3">
+            <img src="img/haus.png" alt="">
+          </div>
+          <div class="col-3">
+            <img src="img/newyork.png" alt="" >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.thebestpartners -->
+
 
 
      <script src="jquery-3.3.1.min.js"></script>
