--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
 
     <div class="purchasenow">
       <div class="container">
-        <h3>Become A Part Of TheFox Business Community Today</h3>
-        <a href="#" class="bpurchasenow">purchase now</a>
+        <div class="row align-items-center">
+          <div class="col-9"><h3>Become A Part Of TheFox Business Community Today</h3></div>
+          <div class="col-3"><a href="#" class="bpurchasenow">purchase now</a></div>
+        </div>
+
+
       </div>
     </div>
 
@@ -352,7 +356,7 @@
 
           <div class="col-3">
             <img src="img/cubanese.png" alt="">
-            <div class="poloska-ver"></div>
+
           </div>
           <div class="col-3">
             <img src="img/handcralt.png" alt="">
@@ -383,6 +387,162 @@
       </div>
     </div>
     <!-- /.thebestpartners -->
+
+    <div class="prisingtables">
+      <div class="container">
+        <h3>Pricing Tables</h3>
+        <div class="small-line"></div>
+        <p>Curabitur ac lacus arcu. Sed vehicula varius lectus auctor viverra.<br> Nulla vehicula nibh vel ante commodo feugiat.</p>
+        <div class="row align-items-center">
+          <div class="col">
+            <h3>Personal</h3>
+            <div class="small-line"></div>
+            <h5>From <span class="blue">99$</span> Per Months</h5>
+            <div class="gray-line"></div>
+            <h6><i class="fa fa-check" aria-hidden="true"></i> 01 PSD Pack</h6>
+            <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+            <div class="gray-line-small"></div>
+            <h6><i class="fa fa-check" aria-hidden="true"></i> 01 WordPress Install</h6>
+            <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+            <div class="gray-line-small"></div>
+            <h6><i class="fa fa-check" aria-hidden="true"></i> 100 Support Ticket</h6>
+            <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+            <div class="gray-line-1"></div>
+            <div class="getstartednow">
+              <a href="#" class="bgetstartednow">get started now</a>
+            </div>
+          </div>
+          <div class="col z">
+            <div class="shadow">
+              <div class="big-line"></div>
+              <div class="parallelogram">
+                <h4>Recommend</h4>
+              </div>
+              <h3>Business</h3>
+              <div class="small-line"></div>
+              <h5>From <span class="blue">599$</span> Per Months</h5>
+              <div class="gray-line"></div>
+              <h6><i class="fa fa-check" aria-hidden="true"></i> 05 PSD Pack</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+              <div class="gray-line-small"></div>
+              <h6><i class="fa fa-check" aria-hidden="true"></i> 05 WordPress Install</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+              <div class="gray-line-small"></div>
+              <h6><i class="fa fa-check" aria-hidden="true"></i> 1000 Support Ticket</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+              <div class="gray-line-1"></div>
+              <div class="green-getstartednow">
+                <a href="#" class="green-bgetstartednow">get started now</a>
+              </div>
+            </div>
+          </div>
+
+            <div class="col y">
+
+              <h3>Ultimate</h3>
+              <div class="small-line"></div>
+              <h5>From <span class="blue">999$</span> Per Months</h5>
+              <div class="gray-line"></div>
+              <h6><i class="fa fa-check" aria-hidden="true"></i> 10 PSD Pack</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+              <div class="gray-line-small"></div>
+              <h6><i class="fa fa-check" aria-hidden="true"></i> 30 WordPress Install</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+              <div class="gray-line-small"></div>
+              <h6><i class="fa fa-check" aria-hidden="true"></i> Support Unlimited</h6>
+              <p>Curabitur ac lacus arcu. Sed vehicula<br> lectus auctor viverra. Vehicula.</p>
+              <div class="gray-line-1"></div>
+              <div class="getstartednow">
+                <a href="#" class="bgetstartednow">get started now</a>
+              </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.prisingtables -->
+
+    <div class="reg">
+      <div class="container">
+        <h3>Contact Us Today. Let‘s Work Together</h3>
+        <div class="small-line"></div>
+        <p>Whether you're a local or national business, big brand or high profile celebrity, we’ve worked with<br> them all – we can help you get where you want to be.</p>
+        <div id="wrapper">
+          <form class="reg-form" action="index.html" method="post" autocomplete="on">
+              <input type="username"  required="required" type="text" placeholder="Name"/>
+              <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="Email"/>
+              <input id="phone" type="phone" placeholder="Phone" pattern="+[0-9]-[0-9{10}]"/>
+              <input id="company-name" name="company-name"  placeholder="Company Name"/>
+              <p class="login button">
+                      <input type="submit" value="GET STARTED NOW" />
+              </p>
+          </form>
+        </div>
+        <div class="fields-required">
+          <p>All fields are required</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="adress">
+        <div class="container">
+
+            <div class="row">
+              <div class="col">
+                <img src="img/logo.png" alt="thefox business">
+                <h3>thefox plus</h3>
+                <p>made for business</p>
+              </div>
+              <div class="col">
+                <h5>Postal Address</h5>
+                <li>
+                  <ul>PO Box 16122 Collins Street </ul>
+                  <ul>West</ul>
+                  <ul>Victoria 8007 </ul>
+                  <ul>Australia</ul>
+                </li>
+              </div>
+              <div class="col">
+                <h5>Envato Headquarters</h5>
+                <li>
+                  <ul>121 King Street,</ul>
+                  <ul>Melbourne</ul>
+                  <ul>Victoria 3000</ul>
+                  <ul>Australia</ul>
+                </li>
+            </div>
+              <div class="col">
+                <h5>Tranmautritam</h5>
+                <li>
+                  <ul>Tranmautritam@gmail.com</ul>
+                  <ul>+84 935 815 989</ul>
+                  <ul>tranmautritam.com</ul>
+                  <ul>Vietnam</ul>
+                </li>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="allrights">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-9"><p>© 2015 All Rights Reserved <span class="white">Tranmautritam</span> - Envato Pty Ltd. Contact the Envato Market Help Team.</p></div>
+            <div class="col-3">
+              <div class="soc-seti">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-vimeo-v"></i></a>
+                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+              </div>
+           </div>
+
+
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
