--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         <div class="poloska">
 
         </div>
-        <div class="graytext">
+
           <p>Curabitur ac lacus arcu. Sed vehicula varius lectus auctor<span> viverra. Nulla vehicula nibh vel ante commodo feugiat.</p>
-        </div>
-        <div class="blacktext-noalign">
-          <p>Cras gravida arcu tincidunt, suscipit velit sed, porta sapien. Maecenas a aliquam<span> lectus. Vivamus consequat purus quis ligula vestibulum, eget mattis ex fermentum. <span> Donec placerat felis sit amet venenatis faucibus. Praesent aliquet convallis.</p>
-        </div>
+
+
+          <p class="black">Cras gravida arcu tincidunt, suscipit velit sed, porta sapien. Maecenas a aliquam<span> lectus. Vivamus consequat purus quis ligula vestibulum, eget mattis ex fermentum. <span> Donec placerat felis sit amet venenatis faucibus. Praesent aliquet convallis.</p>
+
         <div class="takeatour-botton">
           <a href="#" class="takeatour"><i class="far fa-lightbulb"></i> Take A Tour</a>
 
