--- a/index.html
+++ b/index.html
@@ -14,24 +14,34 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
    </head>
    <body>
-     <div class="container">
-       <div class="row align-items-center">
-         <div class="col-md-4">
-           <a href="#"><img src="img/logo.png" alt="thefox business" class="logo"></a>
-           <h3 class="name"><a  href="#">thefox business</a></h3>
+     <div class="upper">
+       <div class="container">
+         <div class="row align-items-center">
+           <div class="col-md-4">
+             <a href="#"><img src="img/logo.png" alt="thefox business" class="logo"></a>
+             <h3 class="name"><a  href="#">thefox business</a></h3>
+           </div>
+           <div class="col-md-8">
+             <ul class="menu_elements">
+               <li><a href="#">home </a></li>
+               <li><a href="#">demos</a></li>
+               <li><a href="#">features</a></li>
+               <li><a href="#">shortcodes</a></li>
+               <li><a href="#">shop</a></li>
+               <li><a href="#">blog</a></li>
+               <li><a href="#">portfolio</a></li>
+             </ul>
+
+             <div class="navigator" >
+               <nav class="navbar navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </nav>
+            </div>
+           </div>
          </div>
-         <div class="col-md-8">
-           <ul class="menu_elements">
-             <li><a href="#">home </a></li>
-             <li><a href="#">demos</a></li>
-             <li><a href="#">features</a></li>
-             <li><a href="#">shortcodes</a></li>
-             <li><a href="#">shop</a></li>
-             <li><a href="#">blog</a></li>
-             <li><a href="#">portfolio</a></li>
-           </ul>
-         </div>
-       </div>
+      </div>
     </div>
     <div class="index-ecran">
       <div class="container">
@@ -106,6 +116,7 @@
         </div>
 
       </div>
+      </div>
       <div class="colori">
         <div class="container">
           <h3>Dispenser<span> Bottle Mockup</h3>
@@ -113,7 +124,7 @@
         </div>
       </div>
 
-    </div>
+
 
     <div class="purchasenow">
       <div class="container">
@@ -527,7 +538,7 @@
       <div class="allrights">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-9"><p>© 2015 All Rights Reserved <span class="white">Tranmautritam</span> - Envato Pty Ltd. Contact the Envato Market Help Team.</p></div>
+            <div class="col-9"><p class="all">© 2015 All Rights Reserved <span class="white">Tranmautritam</span> - Envato Pty Ltd. Contact the Envato Market Help Team.</p></div>
             <div class="col-3">
               <div class="soc-seti">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
